@@ -3,12 +3,12 @@
 use lib '.';
 use rnumber;
 
-print pl_rnumber::rnumber_cstr(pl_rnumber::rnumber_create_from_unsigned(10)) . "\n";
-pl_rnumber::random_create();
-pl_rnumber::random_init();
-print pl_rnumber::random_get_integer(), "\n";
+print RNumber::rnumber_cstr(RNumber::rnumber_create_from_unsigned(10)) . "\n";
+RNumber::random_create();
+RNumber::random_init();
+print RNumber::random_get_integer(), "\n";
 
-my $a = pl_rnumber::rnumber_create_from_unsigned(10);
+my $a = RNumber::rnumber_create_from_unsigned(10);
 my $b = 10;
 
 print "ref a '", ref($a), "'\n";
@@ -16,7 +16,7 @@ print "ref b '", ref($b), "'\n";
 
 my $string = "1234";
 my $integer = 10;
-my $rnumber = pl_rnumber::rnumber_create_from_unsigned(10);
+my $rnumber = RNumber::rnumber_create_from_unsigned(10);
 
 print "string  stringp ", stringp($string), " integerp ", integerp($string), " rnumberp ", 
     rnumberp($string), "\n";
